--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -243,9 +243,9 @@ if(NOT BUILD_SHARED_LIBS)
 endif()
 
 # hkdf_test
-add_executable(hkdf_test hkdf_test.c)
-target_link_libraries(hkdf_test ${OPENSSL_LIBS})
-add_test(hkdf_test hkdf_test)
+#add_executable(hkdf_test hkdf_test.c)
+#target_link_libraries(hkdf_test ${OPENSSL_LIBS})
+#add_test(hkdf_test hkdf_test)
 
 # hmactest
 add_executable(hmactest hmactest.c)
@@ -308,9 +308,9 @@ target_link_libraries(optionstest ${OPENSSL_LIBS})
 add_test(optionstest optionstest)
 
 # pbkdf2
-add_executable(pbkdf2 pbkdf2.c)
-target_link_libraries(pbkdf2 ${OPENSSL_LIBS})
-add_test(pbkdf2 pbkdf2)
+#add_executable(pbkdf2 pbkdf2.c)
+#target_link_libraries(pbkdf2 ${OPENSSL_LIBS})
+#add_test(pbkdf2 pbkdf2)
 
 # pidwraptest
 # pidwraptest relies on an OS-specific way to give out pids and is generally
@@ -433,21 +433,21 @@ target_link_libraries(sm4test ${OPENSSL_LIBS})
 add_test(sm4test sm4test)
 
 # ssl_versions
-if(NOT BUILD_SHARED_LIBS)
-	add_executable(ssl_versions ssl_versions.c)
-	target_link_libraries(ssl_versions ${OPENSSL_LIBS})
-	add_test(ssl_versions ssl_versions)
-endif()
+#if(NOT BUILD_SHARED_LIBS)
+#	add_executable(ssl_versions ssl_versions.c)
+#	target_link_libraries(ssl_versions ${OPENSSL_LIBS})
+#	add_test(ssl_versions ssl_versions)
+#endif()
 
 # ssltest
-add_executable(ssltest ssltest.c)
-target_link_libraries(ssltest ${OPENSSL_LIBS})
-if(NOT MSVC)
-	add_test(NAME ssltest COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/ssltest.sh)
-else()
-	add_test(NAME ssltest COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/ssltest.bat $<TARGET_FILE:ssltest> $<TARGET_FILE:openssl>)
-endif()
-set_tests_properties(ssltest PROPERTIES ENVIRONMENT "srcdir=${TEST_SOURCE_DIR}")
+#add_executable(ssltest ssltest.c)
+#target_link_libraries(ssltest ${OPENSSL_LIBS})
+#if(NOT MSVC)
+#	add_test(NAME ssltest COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/ssltest.sh)
+#else()
+#	add_test(NAME ssltest COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/ssltest.bat $<TARGET_FILE:ssltest> $<TARGET_FILE:openssl>)
+#endif()
+#set_tests_properties(ssltest PROPERTIES ENVIRONMENT "srcdir=${TEST_SOURCE_DIR}")
 
 # testdsa
 if(NOT MSVC)
@@ -479,43 +479,43 @@ target_link_libraries(timingsafe ${OPENSSL_LIBS})
 add_test(timingsafe timingsafe)
 
 # tlsexttest
-if(NOT BUILD_SHARED_LIBS)
-	add_executable(tlsexttest tlsexttest.c)
-	target_link_libraries(tlsexttest ${OPENSSL_LIBS})
-	add_test(tlsexttest tlsexttest)
-endif()
+#if(NOT BUILD_SHARED_LIBS)
+#	add_executable(tlsexttest tlsexttest.c)
+#	target_link_libraries(tlsexttest ${OPENSSL_LIBS})
+#	add_test(tlsexttest tlsexttest)
+#endif()
 
 # tlstest
-set(TLSTEST_SRC tlstest.c)
-check_function_exists(pipe2 HAVE_PIPE2)
-if(HAVE_PIPE2)
-	add_definitions(-DHAVE_PIPE2)
-else()
-	set(TLSTEST_SRC ${TLSTEST_SRC} compat/pipe2.c)
-endif()
+#set(TLSTEST_SRC tlstest.c)
+#check_function_exists(pipe2 HAVE_PIPE2)
+#if(HAVE_PIPE2)
+#	add_definitions(-DHAVE_PIPE2)
+#else()
+#	set(TLSTEST_SRC ${TLSTEST_SRC} compat/pipe2.c)
+#endif()
 
-add_executable(tlstest ${TLSTEST_SRC})
-target_link_libraries(tlstest ${OPENSSL_LIBS})
-if(NOT MSVC)
-	add_test(NAME tlstest COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/tlstest.sh)
-else()
-	add_test(NAME tlstest COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/tlstest.bat $<TARGET_FILE:tlstest>)
-endif()
-set_tests_properties(tlstest PROPERTIES ENVIRONMENT "srcdir=${TEST_SOURCE_DIR}")
+#add_executable(tlstest ${TLSTEST_SRC})
+#target_link_libraries(tlstest ${OPENSSL_LIBS})
+#if(NOT MSVC)
+#	add_test(NAME tlstest COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/tlstest.sh)
+#else()
+#	add_test(NAME tlstest COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/tlstest.bat $<TARGET_FILE:tlstest>)
+#endif()
+#set_tests_properties(tlstest PROPERTIES ENVIRONMENT "srcdir=${TEST_SOURCE_DIR}")
 
 # tls_ext_alpn
-if(NOT BUILD_SHARED_LIBS)
-	add_executable(tls_ext_alpn tls_ext_alpn.c)
-	target_link_libraries(tls_ext_alpn ${OPENSSL_LIBS})
-	add_test(tls_ext_alpn tls_ext_alpn)
-endif()
+#if(NOT BUILD_SHARED_LIBS)
+#	add_executable(tls_ext_alpn tls_ext_alpn.c)
+#	target_link_libraries(tls_ext_alpn ${OPENSSL_LIBS})
+#	add_test(tls_ext_alpn tls_ext_alpn)
+#endif()
 
 # tls_prf
-if(NOT BUILD_SHARED_LIBS)
-	add_executable(tls_prf tls_prf.c)
-	target_link_libraries(tls_prf ${OPENSSL_LIBS})
-	add_test(tls_prf tls_prf)
-endif()
+#if(NOT BUILD_SHARED_LIBS)
+#	add_executable(tls_prf tls_prf.c)
+#	target_link_libraries(tls_prf ${OPENSSL_LIBS})
+#	add_test(tls_prf tls_prf)
+#endif()
 
 # utf8test
 if(NOT BUILD_SHARED_LIBS)
